# Spring-IT-Platform

./: .env.example  .gitignore  README.md  docker-compose.yml
ai-service/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
ai-service/alembic/: env.py
ai-service/alembic/versions/: 0001_initial.py
ai-service/app/: config.py  jobs.py  main.py  security.py
ai-service/app/adapters/: ticket_client.py
ai-service/app/adapters/notify/: __init__.py  base.py  email.py  slack.py
ai-service/app/adapters/queue/: __init__.py  base.py  local.py
ai-service/app/adapters/storage/: __init__.py  base.py  local.py
ai-service/app/api/: routes_admin.py  routes_analyze.py  routes_assist.py  sse.py
ai-service/app/db/: models.py  session.py
ai-service/app/graph/: builder.py  llm.py  prompts.py  runner.py  state.py
ai-service/app/graph/nodes/: api_agent.py  classify.py  escalate.py  retrieve_docs.py  retrieve_tickets.py  summarize.py  troubleshoot.py
ai-service/app/rag/: chunking.py  embeddings.py  ingest.py  retriever.py  ticket_indexer.py
ai-service/tests/: conftest.py
ai-service/tests/integration/: test_api.py
ai-service/tests/unit/: test_api_agent.py  test_chunking.py  test_nodes.py  test_security.py
auth-service/: Dockerfile  pom.xml
frontend/: README.md  index.html  package-lock.json  package.json
knowledge-base/: expense-reimbursement-policy.md  hr-onboarding-guide.md  network-troubleshooting.md  outlook-exchange-troubleshooting.md  password-reset-policy.md  printer-and-peripherals.md  security-incident-runbook.md  vpn-access-guide.md
(+103 files in other folders)
